--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@ngx-share/core": "^5.3.1",
+    "@tinymce/tinymce-angular": "^2.0.0",
     "angularx-social-login": "^1.2.0",
     "core-js": "^2.4.1",
     "ngx-webstorage": "^2.0.1",
