--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@ngx-share/core": "^5.3.1",
     "@tinymce/tinymce-angular": "^2.0.0",
     "angularx-social-login": "^1.2.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
+    "ng2-charts": "^1.6.0",
     "ngx-webstorage": "^2.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
